# enterprise_rag_platform

./: .gitignore  .vpeetla-skills.json  Dockerfile  README.md  pyproject.toml  render.yaml  vercel.json
.cursor/skills/rag-governance/: SKILL.md
.github/workflows/: tests.yml
demo/: app.js  config.js  index.html  styles.css  vercel.json
demo/fixtures/: zephyr-policy.txt
docs/: ARCHITECTURE.md  ECOSYSTEM.md  LIVE_DEMO.md  operating-model.md  risk-register.md  scalability.md
docs/adr/: 0001-hybrid-retrieval.md  0002-access-before-ranking.md  0003-versioned-evaluation-gates.md
scripts/: smoke_demo_strategies.py
src/enterprise_rag/: __init__.py
src/enterprise_rag/adapters/: qdrant_retriever.py
src/enterprise_rag/api/: app.py
src/enterprise_rag/core/: access.py  context.py  entity_extract.py  graph_expander.py  guardrails.py  ingestion.py  models.py  pipeline.py  reranker.py  retrieval.py  retriever.py  text.py
src/enterprise_rag/eval/: metrics.py
src/enterprise_rag/integrations/: aegis_bridge.py
src/enterprise_rag/ops/: langfuse_export.py  otel_export.py  telemetry.py
tests/: test_aegis_bridge.py  test_evaluation.py  test_golden.py  test_graph_expansion.py  test_langfuse_export.py  test_otel_export.py  test_pipeline.py
tests/fixtures/: golden_queries.json
